--- a/css/product-img-slider.scss
+++ b/css/product-img-slider.scss
@@ -79,8 +79,8 @@ $text-color: #005dff;
   }
 }
 .product-details {
-    padding-top: 50px;
-    background-color: #fff;
+  padding-top: 50px;
+  background-color: #fff;
   .product-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -102,11 +102,11 @@ $text-color: #005dff;
       }
     }
     .product-info {
-        color: #343a40;
+      color: #343a40;
       h1 {
         font-family: $josefin;
         font-size: clamp(18px, 2rem, 2.5rem);
-        @include mobile(){
+        @include mobile() {
           font-size: clamp(18px, 1.7rem, 1.7rem);
         }
       }
@@ -121,16 +121,21 @@ $text-color: #005dff;
           font-size: 0.9rem;
         }
       }
-      #phonecall{
-        transform:translate(20px,20px);
-        opacity:0;
+      #phonecall {
+        transform: translate(20px, 20px);
+        opacity: 0;
         transition: all 0.5s ease;
+        @include tab() {
+          transform: translate(0);
+          opacity: 1;
+        }
       }
       a {
-        margin-left: 5%;
+        display: block;
+        width: 100%;
+        text-align: center;
         padding: 0.5rem 1.5rem 0.5rem 1.5rem;
         background-color: $nav-color;
-        transform: translateY(50px) !important;
         font-family: $jost;
         color: #fff;
         font-size: clamp(15px, 1.1rem, 1.5rem);
@@ -141,21 +146,105 @@ $text-color: #005dff;
           text-decoration: none;
           transition: 0.3s ease;
           box-shadow: 5px 5px 10px $nav-color, -5px -5px 10px $text-color;
-          #phonecall{
-            transform:translate(0);
-            opacity:1;
+          #phonecall {
+            transform: translate(0);
+            opacity: 1;
             transition: all 0.5s ease;
           }
         }
       }
-      .card-footer{
-          margin-top: 1rem !important;
-          background-color: transparent !important;
-          outline: none;
-          border: 0px !important;
-          padding: 0px !important;
+      .card-footer {
+        margin-top: 1rem !important;
+        background-color: transparent !important;
+        outline: none;
+        border: 0px !important;
+        padding: 0px !important;
       }
     }
   }
 }
+.additional-details-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 0.3rem;
+  font-size: clamp(15px, 1.1rem, 1.2rem) !important;
+  li {
+    text-align: left;
+  }
+}
+.reviews {
+  padding: 2rem;
+  margin: 0.5rem;
+  p {
+    padding: 0.5rem !important;
+  }
+  @include mobile() {
+    padding: 0.5rem;
+    margin: 0;
+  }
+}
+form {
+  background-image: linear-gradient(to right, #4facfe 0%, #00f2fe 100%);
+  padding: 2rem;
+  grid-gap: 0;
+  border-radius: 8px;
+  box-sizing: border-box;
+  box-shadow: 0 0px 1.4px -71px rgba(0, 0, 0, 0.022),
+    0 0px 3.4px -71px rgba(0, 0, 0, 0.032),
+    0 0px 6.4px -71px rgba(0, 0, 0, 0.04),
+    0 0px 11.4px -71px rgba(0, 0, 0, 0.048),
+    0 0px 21.3px -71px rgba(0, 0, 0, 0.058),
+    0 0px 51px -71px rgba(0, 0, 0, 0.08);
+  font-family: $josefin !important;
+  @include mobile(){
+    padding: 0.8rem;
+    padding-top: 1.5rem;
+  }
+  label {
+    padding-top: 1rem;
+    @include mobile() {
+      padding-top: 0.8rem;
+    }
+    padding-left: 0.9rem;
+  }
+  legend {
+    margin: 0 !important;
+  }
+  input {
+    width: 100%;
+    outline: none;
+    border: 0px;
+    padding: 0.5rem;
+    padding-left: 1.5rem;
+    border-radius: 50px;
+    font-family: $jost !important;
+  }
+  textarea {
+    outline: none;
+    padding: 0.5rem;
+    border: 0px;
+    padding-left: 1.5rem;
+    font-family: $jost !important;
+    letter-spacing: 0.1rem;
+    border-radius: 8px;
+  }
+  button {
+    color: #fff !important;
+    border-radius: 50px !important;
+    background-color: #747474 !important;
+    font-family: $jost !important;
+    font-size: 1rem !important;
+    font-weight: 600 !important;
+    letter-spacing: 0.08em;
+    transition: all 0.5s ease !important;
+    @include mobile(){
+      background-color: #005dff !important;
+      margin-top: 0.5rem;
+    }
 
+    &:hover {
+      background-color: #005dff !important;
+      transition: all 0.5s ease !important;
+    }
+  }
+}
