--- a/css/product-img-slider.css
+++ b/css/product-img-slider.css
@@ -188,13 +188,29 @@
   font-size: clamp(15px, 1.1rem, 1.2rem) !important;
 }
 
+@media (max-width: 600px) {
+  .additional-details-grid {
+    grid-column-gap: 1rem;
+    -ms-grid-columns: (1fr)[1];
+        grid-template-columns: repeat(1, 1fr);
+  }
+}
+
 .additional-details-grid li {
   text-align: left;
+  font-family: "Jost", sans-serif;
+}
+
+@media (max-width: 600px) {
+  .additional-details-grid li {
+    font-size: 0.9rem;
+  }
 }
 
 .reviews {
   padding: 2rem;
   margin: 0.5rem;
+  font-family: "Josefin Sans", sans-serif !important;
 }
 
 .reviews p {
@@ -204,7 +220,7 @@
 @media (max-width: 600px) {
   .reviews {
     padding: 0.5rem;
-    margin: 0;
+    margin: 0.5rem;
   }
 }
 
