--- a/css/product-img-slider.scss
+++ b/css/product-img-slider.scss
@@ -167,20 +167,30 @@ $text-color: #005dff;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 0.3rem;
+  @include mobile(){
+    grid-column-gap: 1rem;
+    grid-template-columns: repeat(1, 1fr);
+
+  }
   font-size: clamp(15px, 1.1rem, 1.2rem) !important;
   li {
     text-align: left;
+    font-family: $jost;
+    @include mobile(){
+      font-size: 0.9rem;
+    }
   }
 }
 .reviews {
   padding: 2rem;
   margin: 0.5rem;
+  font-family: $josefin !important;
   p {
     padding: 0.5rem !important;
   }
   @include mobile() {
     padding: 0.5rem;
-    margin: 0;
+    margin: 0.5rem;
   }
 }
 form {
